[package]
name = 'debio-runtime'
version = '2.1.2'
edition = '2021'
license = 'AGPL-3.0'
authors = ['DeBio Dev Team <debio_dev@blocksphere.id>']
homepage = 'https://debio.network'
repository = 'https://github.com/debionetwork/debio-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[dependencies]
# External Dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
hex-literal = { version = '0.3.4', optional = true }
log = { version = '0.4.14', default-features = false }

# Substrate Dependencies
## Substrate Primitive Dependencies
beefy-primitives = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-block-builder = {  version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"}
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18"}
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

## Substrate Frame Dependencies
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

## Substrate Pallet Dependencies
pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-babe = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-beefy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-beefy-mmr = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-mmr = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-mmr-primitives = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", features = ['historical'] }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }
pallet-uniques = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { default-features = false, git = "https://github.com/octopus-network/octopus-pallets.git", branch = "release-v0.9.18" }
pallet-octopus-lpos = { default-features = false, git = "https://github.com/octopus-network/octopus-pallets.git", branch = "release-v0.9.18" }
pallet-octopus-upward-messages = { default-features = false, git = "https://github.com/octopus-network/octopus-pallets.git", branch = "release-v0.9.18" }

# Local Pallet
labs = { path = '../pallets/labs', default-features = false }
labs-benchmarking = { path = '../pallets/labs/benchmarking', default-features = false, optional = true }
rewards = { path = '../pallets/rewards', default-features = false }
services = { path = '../pallets/services', default-features = false }
service-request = { path = '../pallets/service-request', default-features = false }
service-request-benchmarking = { path = '../pallets/service-request/benchmarking', default-features = false, optional = true }
services-benchmarking = { path = '../pallets/services/benchmarking', default-features = false, optional = true }
orders = { path = '../pallets/orders', default-features = false }
orders-benchmarking = { path = '../pallets/orders/benchmarking', default-features = false, optional = true }
genetic-testing = { path = '../pallets/genetic-testing', default-features = false }
genetic-testing-benchmarking = { path = '../pallets/genetic-testing/benchmarking', default-features = false, optional = true }
user-profile = { path = '../pallets/user-profile', default-features = false }
electronic-medical-record = { path = '../pallets/electronic-medical-record', default-features = false }
certifications = { path = '../pallets/certifications', default-features = false }
certifications-benchmarking = { path = '../pallets/certifications/benchmarking', default-features = false, optional = true }
hospitals = { path = '../pallets/hospitals', default-features = false }
hospital-certifications = { path = '../pallets/hospital-certifications', default-features = false }
hospital-certifications-benchmarking = { path = '../pallets/hospital-certifications/benchmarking', default-features = false, optional = true }
doctors = { path = '../pallets/doctors', default-features = false }
doctor-certifications = { path = '../pallets/doctor-certifications', default-features = false }
doctor-certifications-benchmarking = { path = '../pallets/doctor-certifications/benchmarking', default-features = false, optional = true }
genetic-data = { path = '../pallets/genetic-data', default-features = false }
genetic-analysts = { path = '../pallets/genetic-analysts', default-features = false }
genetic-analysts-benchmarking = { path = '../pallets/genetic-analysts/benchmarking', default-features = false, optional = true }
genetic-analyst-services = { path = '../pallets/genetic-analyst-services', default-features = false }
genetic-analyst-qualifications = { path = '../pallets/genetic-analyst-qualifications', default-features = false }
genetic-analyst-services-benchmarking = { path = '../pallets/genetic-analyst-services/benchmarking', default-features = false, optional = true }
genetic-analyst-qualifications-benchmarking = { path = '../pallets/genetic-analyst-qualifications/benchmarking', default-features = false, optional = true }
genetic-analysis = { path = '../pallets/genetic-analysis', default-features = false }
genetic-analysis-orders = { path = '../pallets/genetic-analysis-orders', default-features = false }
genetic-analysis-orders-benchmarking = { path = '../pallets/genetic-analysis-orders/benchmarking', default-features = false, optional = true }
genetic-analysis-benchmarking = { path = '../pallets/genetic-analysis/benchmarking', default-features = false, optional = true }

[features]
default = ['std']
std = [
    # External Dependencies
	'codec/std',
	'log/std',
	'scale-info/std',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'beefy-primitives/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',

	## Substrate Frame Dependencies
	'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    "frame-try-runtime/std",

	## Substrate Pallet Dependencies
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-beefy-mmr/std',
    'pallet-beefy/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-mmr-primitives/std',
    'pallet-mmr/std',
	'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
	'pallet-uniques/std',

	# Octopus Dependencies
	## Octopus Pallet Dependencies
	'pallet-octopus-appchain/std',
    'pallet-octopus-lpos/std',
    'pallet-octopus-upward-messages/std',

	# Local Pallet
    'labs/std',
    'rewards/std',
    'services/std',
	'service-request/std',
    'orders/std',
    'genetic-testing/std',
    'user-profile/std',
    'electronic-medical-record/std',
    'certifications/std',
    'hospitals/std',
    'hospital-certifications/std',
    'doctors/std',
    'doctor-certifications/std',
    'genetic-data/std',
    'genetic-analysts/std',
    'genetic-analyst-services/std',
    'genetic-analyst-qualifications/std',
    'genetic-analysis/std',
    'genetic-analysis-orders/std',
]
runtime-benchmarks = [
	# External Dependencies
	'hex-literal',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'sp-runtime/runtime-benchmarks',

	## Substrate Frame Dependencies
	'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',

	# Local Pallet
	'labs-benchmarking',
	'services-benchmarking',
	'certifications-benchmarking',
	'orders-benchmarking',
	'electronic-medical-record/runtime-benchmarks',
	'hospitals/runtime-benchmarks',
	'hospital-certifications-benchmarking',
	'doctors/runtime-benchmarks',
	'doctor-certifications-benchmarking',
	'genetic-analysts/runtime-benchmarks',
	'genetic-analyst-qualifications-benchmarking',
	'genetic-analyst-services-benchmarking',
	'genetic-testing-benchmarking',
	'genetic-analysis-benchmarking',
	'user-profile/runtime-benchmarks',
	'rewards/runtime-benchmarks',
	'service-request-benchmarking',
	'genetic-analysis-orders-benchmarking',
	'genetic-data/runtime-benchmarks',
	'genetic-analysts-benchmarking',
	'genetic-analyst-qualifications-benchmarking',
]
