[package]
name = "escrow"
version = "0.1.0"
authors = ["kevin <kevin.janada@gmail.com>"]
edition = "2018"
description = ''
homepage = ''
license = 'Unlicense'
repository = ''

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }
sp-core = { default-features = false, version = '2.0.1' }
pallet-timestamp = { default-features = false, version = '2.0.1' }
services = { path = '../services', default-features = false }
escrow-controller = { path = '../../traits/escrow-controller', default-features = false }
chrono = { default-features = false, version = '0.4' }

[dev-dependencies]
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'pallet-timestamp/std',
    'services/std',
    'chrono/std',
]
